loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:3: error: not found: value acance
  acance()
  ^